css slide height to 90 percent to address bottom cutoff issue

--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,7 @@ li { line-height: 1.8; }
   position: absolute;
   inset: 0;
   width: 100%;
-  height: 100%;
+  height: 90%;
   object-fit: scale-down;
 }
 
